Changed signin from JSF to Servlet

--- a/src/main/webapp/signin.xhtml
+++ b/src/main/webapp/signin.xhtml
@@ -6,7 +6,7 @@
 				xmlns:ui="http://xmlns.jcp.org/jsf/facelets" >
 
 	<ui:define name="content">
-		<form action="#{request.contextPath}/servlet_signin" method="POST">
+		<form action="#{request.contextPath}/dosignin" method="POST">
 			<div class="container" style="padding-top: 48px; padding-bottom: 48px; height: 240px;">
 				<div class="row" style="padding-bottom: 16px;">
 					<div class="controls span6">
