Fixed bug delete button on fboard

--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -29,7 +29,7 @@
 							<p:panel>
 								<p:lineChart id="burndown" value="#{dashboard.burndown(b)}"
 											 style="height:240px; width: 320px;" fill="true"
-											 minY="0" minX="0" xaxisLabel="Date" yaxisLabel="Task (hr)" />
+											 minY="0" minX="0" xaxisLabel="Days" yaxisLabel="Task (hr)" />
 							</p:panel>
 						</td>
 						<td>
