--- a/src/main/webapp/fboard.xhtml
+++ b/src/main/webapp/fboard.xhtml
@@ -60,7 +60,7 @@
 							<div style="padding-bottom: 48px; padding-left: 24px; float:left;">
 								<p:commandButton id="remove" icon="ui-icon ui-icon-closethick" value="ลบ"
 												 styleClass="btn btn-mini btn-danger" update="msgs"
-												 rendered="#{!fboard.removeable}"
+												 rendered="#{fboard.removeable}"
 												 onclick="confirmation.show();" />
 							</div>
 						</div>
