Fixed bug cannot create new board.

--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -10,7 +10,7 @@
 			<div style="float:left;">
 				<p:commandButton id="back" icon="ui-icon ui-icon-plus" value="กระดาน"
 								 styleClass="btn btn-mini btn-info"
-								 onclick="window.location.href = '#{request.contextPath}/fboard';" />
+								 onclick="window.location.href = '#{request.contextPath}/fboard/create';" />
 			</div>
 		</div>
 	</ui:define>
