--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -5,7 +5,7 @@
 	  xmlns:p="http://primefaces.org/ui"
 	  xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition template="/WEB-INF/template/base.xhtml" >
+    <ui:composition template="/WEB-INF/template/web.xhtml" >
 		<ui:define name="content">
 			UNDER CONSTRUCTION
 			<ui:remove>
