--- a/src/main/webapp/signinjsf.xhtml
+++ b/src/main/webapp/signinjsf.xhtml
@@ -1,4 +1,4 @@
-<ui:composition template="/WEB-INF/template/base.xhtml"
+<ui:composition template="/WEB-INF/template/web.xhtml"
 				xmlns="http://www.w3.org/1999/xhtml"
 				xmlns:p="http://primefaces.org/ui"
 				xmlns:h="http://xmlns.jcp.org/jsf/html"
